<resources>
    <string name="str_app">Jarr</string>
    <string name="str_post_detail">Post Details</string>
    <string name="str_sort">Sort</string>
    <string name="str_share">Share</string>
    <string name="str_mainscreen">Reddit Login Credential</string>
    <string name="str_search">Search</string>
    <string name="str_snew">New</string>
    <string name="str_manage">Post Manager</string>
    <string name="str_shot">Hot</string>
    <string name="str_stype">sortType</string>
    <string name="str_stop">Top</string>
    <string name="str_scontro">Pulse</string>
    <string name="str_preusr">u/</string>
    <string name="str_favkey">favorite_srs_key</string>
    <string name="str_profile">Users</string>
    <string name="str_redage">&#160;Reddit age</string>
    <string name="str_karma">&#160;Karma</string>
    <string name="str_gcredit">&#160;Gold Credits</string>
    <string name="str_ok">ok</string>
    <string name="str_login">Login</string>
    <string name="str_redlog">Please type your Reddit credential</string>
    <string name="str_postdetail">Post Detail Screen</string>
    <string name="str_presub">t5_</string>
    <string name="str_postlist">Posts List Screen</string>
    <string name="str_subsmanage">Subreddit Manager Screen</string>
    <string name="str_screenlog">Login Screen</string>
    <string name="str_subsearch">Search for subreddits screen</string>
    <string name="str_postthumb">Post thumbnail</string>
    <string name="str_uprofilescreen">Profile Screen</string>
    <string name="str_subscriber">&#160;str_subscriber</string>
    <string name="str_testid">ca-app-pub-5394426349793897~7199365498</string>
    <string name="str_photopost">Post Photo</string>
    <string name="str_favdesc">Mark subreddit favorite - unfavorite</string>
    <string name="str_addunitid">ca-app-pub-5394426349793897/2489964294</string>
    <string name="str_post">Posts</string>
    <string name="str_nopost">No posts available</string>
    <string name="str_subscribemsg">Subscribed</string>
    <string name="str_mustlog">You must press \'allow\' to log in</string>
    <string name="str_favmsg">&#160;posts will be on top feed</string>
    <string name="str_dislikemsg">&#160;posts will not be on top feed</string>
    <string name="str_unsubscribingmsg">Unsubscribing..</string>
    <string name="str_unsubscriber">Unsubscribed</string>
    <string name="str_subscribingmsg">Subscribing..</string>
    <string name="str_redweb">https://www.reddit.com</string>
    <string name="str_subscribetosub">It is lonely here! Subscribe to subreddits!</string>
    <string name="str_connection">No Internet Connection!</string>
    <string name="str_notfound">Subreddits! Empty!</string>
</resources>
